test/fails/bad_functions/arguments5.lgl
int f(int x, a y) {
    return x;
}

void main() {
    print f(1, true);
    return;
}